--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,27 @@
     padding: 0;
     border: border-box;
 }
+body{
+    background-color: rgb(104, 91, 75);
+}
+
+.navigation-bar{
+    border: 2px solid red;
+}
+.nav-logo{
+    border: 1px solid cyan;
+    height: 20px;
+    width: 30px;
+}
+.menu{
+    border: 1px solid yellow;
+}
+.menu ul {
+    display: flex;
+    
+}
+.menu ul li{
+    margin-left: 20px;
+    padding-left: 30px;
+    list-style: none;
+}
