--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,37 @@ body{
 }
 .nav-logo{
     border: 1px solid cyan;
-    height: 20px;
-    width: 30px;
+    height: 40px;
+    width: 50px;
 }
 .menu{
+    display: flex;
     border: 1px solid yellow;
 }
 .menu ul {
     display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     
 }
-.menu ul li{
+.menu ul li {
     margin-left: 20px;
     padding-left: 30px;
     list-style: none;
+    color: white;
+    background-color: greenyellow;
+    
+}
+.menu ul li a{
+    color: red;
+    background-color: greenyellow;
+}
+input{
+    border: 1px solid grey;
+}
+button{
+    height: 15px;
+    width: 40px;
+    
 }
